--- a/Lesson10-Hydration-Reminder/T10.02-Exercise-CreateNotification/app/src/main/res/values/strings.xml
+++ b/Lesson10-Hydration-Reminder/T10.02-Exercise-CreateNotification/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="default_water_count">0</string>
     <string name="default_charge_notification_count">Hydrate while charging reminder sent 0 times</string>
 
+    <string name="main_notification_channel_name">MainChannel</string>
+
     <plurals name="charge_notification_count">
         <item quantity="zero">Hydrate while charging reminder sent %d times</item>
         <item quantity="one">Hydrate while charging reminder sent %d time</item>
